# ChexExplorer

./: Cargo.toml  LICENSE  README.md  setup.bat
src/: app.rs  file_operations.rs  main.rs  settings.rs  theme.rs
src/core/: bookmark.rs  file_item.rs  file_manager.rs  mod.rs  search.rs  settings.rs  thumbnail.rs
src/operations/: compress.rs  copy.rs  create.rs  delete.rs  extract.rs  mod.rs  rename.rs
src/ui/: app.rs  context_menu.rs  dialogs.rs  file_browser.rs  mod.rs  sidebar.rs  status_bar.rs  tabs.rs  toolbar.rs
src/utils/: file_utils.rs  format.rs  icons.rs  mod.rs
